# welldar2

./: CMakeLists.txt  README.md  format.bat  imgui.ini  make.bat
src/: main.cpp
src/wegot/: mainwizard.hpp  mixbuffers.hpp  renderer.hpp
